--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@authbroker/mongo-benchmark",
   "version": "0.0.1",
-  "description": "Paraffin Platform test and authBroker benchmark",
+  "description": "Paraffin Platform and authBroker benchmark",
   "main": "index.js",
   "scripts": {
     "test": "mocha './test/*.test.js' --color --no-timeouts --exit"
