--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Paraffin Platform and authBroker benchmark",
   "main": "index.js",
   "scripts": {
-    "test": "mocha './test/*.test.js' --color --no-timeouts --exit"
+    "test": "mocha --recursive --bail --reporter spec test"
   },
   "repository": {
     "type": "git",
