--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
   "devDependencies": {
     "supertest": "4.0.1",
     "mocha": "6.1.2",
-    "assert": "2.0.0"
+    "assert": "2.0.0",
+    "@authbroker/mongo-benchmark": "0.0.4"
   },
   "publishConfig": {
     "access": "public"
