--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@authbroker/mongo-benchmark",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "description": "Paraffin Platform and authBroker benchmark",
   "main": "index.js",
   "scripts": {
@@ -30,8 +30,7 @@
   "devDependencies": {
     "supertest": "4.0.1",
     "mocha": "6.1.2",
-    "assert": "2.0.0",
-    "@authbroker/mongo-benchmark": "0.0.4"
+    "assert": "2.0.0"
   },
   "publishConfig": {
     "access": "public"
