--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "debug": "4.1.1",
     "mongodb": "3.2.7",
+    "parse": "2.5.1",
     "fake": "0.2.2"
   },
   "devDependencies": {
